# bbx_audio

./: .gitignore  CHANGELOG.md  Cargo.toml  JUCE_FFI.md  LICENSE  README.md  RELEASING.md  SYNTH_PLAN.md  cliff.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: cd.docs.yml  cd.release.yml  ci-clippy.yml  ci-fmt.yml  ci-publish-check.yml  ci-test.yml  ci.build.yml  ci.clippy.yml  ci.fmt.yml  ci.test.yml  docs.yml
bbx_audio/: Cargo.toml
bbx_audio/src/: lib.rs  main.rs
bbx_buffer/: Cargo.toml
bbx_buffer/src/: buffer.rs
bbx_core/: Cargo.toml  README.md
bbx_core/src/: buffer.rs  denormal.rs  error.rs  lib.rs  math.rs  random.rs  sample.rs  simd.rs  spsc.rs  stack_vec.rs
bbx_daisy/: Cargo.toml  README.md  build.rs  memory.x
bbx_daisy/.cargo/: config.toml
bbx_daisy/examples/: 01_blink.rs  02_oscillator.rs  03_filter_knob.rs  04_simple_synth.rs
bbx_daisy/src/: audio.rs  board.rs  buffer.rs  clock.rs  codec.rs  context.rs  controls.rs  flash.rs  init.rs  led.rs  lib.rs  macros.rs  prelude.rs  processor.rs  sdram.rs
bbx_daisy/src/peripherals/: adc.rs  encoder.rs  gpio.rs  mod.rs
bbx_daisy/src/pins/: mod.rs  patch_sm.rs  pod.rs  seed.rs
bbx_draw/: Cargo.toml  README.md
bbx_draw/examples/: 01_sine_wave.rs  02_phase_distortion.rs  03_phase_distortion_random.rs  graph_view.rs  spectrum_analyzer.rs  waveform_basic.rs
bbx_draw/src/: bridge.rs  chart.rs  color.rs  config.rs  context.rs  lib.rs  main.rs  utilities.rs
bbx_draw/src/sketch/: mod.rs  registry.rs  sketchbook.rs  traits.rs
bbx_draw/src/visualizers/: graph_topology.rs  midi_activity.rs  mod.rs  spectrum.rs  waveform.rs
bbx_dsp/: Cargo.toml  README.md  bbx_dsp.h  build.rs  cbindgen.toml
bbx_dsp/benches/: simd_blocks.rs  simd_graphs.rs
bbx_dsp/benches/common/: mod.rs
bbx_dsp/src/: block.rs  buffer.rs  channel.rs  config.rs  constants.rs  context.rs  effector.rs  error.rs  ffi.rs  float.rs  frame.rs  generator.rs  graph.rs  lib.rs  math.rs  modulator.rs  node.rs  operation.rs  oscillator.rs  parameter.rs  phasor.rs  plugin.rs  polyblep.rs  prelude.rs  process.rs  processor.rs  reader.rs  sample.rs  smoothing.rs  utils.rs  voice.rs  waveform.rs  writer.rs
bbx_dsp/src/blocks/: mod.rs
bbx_dsp/src/blocks/effectors/: ambisonic_decoder.rs  binaural_decoder.rs  channel_merger.rs  channel_router.rs  channel_splitter.rs  dc_blocker.rs  filter.rs  gain.rs  low_pass_filter.rs  matrix_mixer.rs  mixer.rs  mod.rs  overdrive.rs  panner.rs  vca.rs
bbx_dsp/src/blocks/effectors/binaural_decoder/: hrir_data.rs  hrtf.rs  matrix.rs  mod.rs  virtual_speaker.rs
bbx_dsp/src/blocks/generators/: mod.rs  oscillator.rs
bbx_dsp/src/blocks/inputs/: file.rs
bbx_dsp/src/blocks/io/: file_input.rs  file_output.rs  mod.rs  output.rs
bbx_dsp/src/blocks/modulators/: envelope.rs  lfo.rs  mod.rs
bbx_dsp/src/effectors/: amplifier.rs  filter.rs  flanger.rs  mixer.rs  mod.rs  overdrive.rs
bbx_dsp/src/generators/: file_reader.rs  mod.rs  wave_table.rs  wavetable.rs
bbx_dsp/src/modulators/: lfo.rs  mod.rs
bbx_dsp/tests/: graph_integration.rs  signal_clipping.rs
bbx_ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
bbx_ffi/include/: bbx_ffi.h  bbx_wrapper.h
bbx_ffi/src/: audio.rs  handle.rs  lib.rs  params.rs
bbx_file/: Cargo.toml  README.md
bbx_file/src/: error.rs  file.rs  lib.rs  reader.rs  renderer.rs
bbx_file/src/readers/: mod.rs  wav.rs
bbx_file/src/writers/: mod.rs  wav.rs
bbx_midi/: Cargo.toml  README.md
bbx_midi/src/: buffer.rs  error.rs  lib.rs  message.rs  stream.rs
bbx_net/: Cargo.toml  README.md
bbx_net/client/: .gitignore  .prettierrc  README.md  eslint.config.ts  package.json  tsconfig.json  vite.config.ts
bbx_net/client/src/: client.ts  connection.ts  errors.ts  index.ts  types.ts
bbx_net/src/: address.rs  buffer.rs  clock.rs  error.rs  lib.rs  message.rs
bbx_net/src/osc/: mod.rs  parser.rs  server.rs
bbx_net/src/websocket/: connection.rs  mod.rs  protocol.rs  room.rs  server.rs
bbx_player/: Cargo.toml  README.md
bbx_player/src/: backend.rs  error.rs  lib.rs  player.rs  signal.rs  source.rs
bbx_player/src/backends/: cpal.rs  mod.rs  rodio.rs
bbx_plugin/: Cargo.toml  README.md  build.rs  cbindgen.toml
bbx_plugin/include/: bbx_ffi.h  bbx_graph.h
bbx_plugin/src/: audio.rs  handle.rs  lib.rs  macros.rs  params.rs
bbx_sample/: Cargo.toml
bbx_sample/src/: float.rs  lib.rs  sample.rs
bbx_sandbox/: Cargo.toml  README.md
bbx_sandbox/examples/: 01_sine_wave.rs  02_pwm.rs  02_sine_wave_mod.rs  02_sine_wave_overdrive.rs  03_dual_osc.rs  03_n_osc.rs  03_overdrive.rs  04_input_wav_file.rs  04_midi.rs  04_wav_file.rs  05_midi_input.rs  05_midi_osc.rs  05_output_wav_file.rs  06_midi_osc.rs  06_midi_synth.rs  06_wav_file.rs  07_ambisonic_panner.rs  07_custom_node.rs  07_stereo_panner.rs  08_ambisonic_panner.rs  08_flanger.rs  09_channel_routing.rs  09_lfo.rs  10_filter_modulation.rs  11_channel_split_merge.rs  12_effect_chain.rs  13_file_processing.rs  14_osc_synth.rs  14_osc_synth.tosc  15_ws_synth.rs  16_offline_rendering.rs
bbx_sandbox/src/: constants.rs  graphs.rs  lib.rs  main.rs  player.rs  signal.rs  simple_synth.rs
bbx_sandbox/src/graphs/: mod.rs  simple_synth.rs  sine_wave.rs  sine_wave_with_overdrive.rs
docs/: CNAME  book.toml
docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-76b91a01.js  toc-a5c83966.js  toc.html
docs/book/appendix/: changelog.html  glossary.html  migration.html  troubleshooting.html
docs/book/architecture/: buffer-management.html  cache-efficiency.html  connections.html  denormals.html  ffi-design.html  graph-architecture.html  handle-management.html  lock-free.html  memory-safety.html  modulation-values.html  modulation.html  parameter-type.html  performance.html  realtime-safety.html  simd.html  stack-allocation.html  topological-sort.html  zero-allocation.html
docs/book/blocks/: effectors.html  generators.html  io.html  modulators.html
docs/book/contributing/: code-style.html  new-blocks.html  (+3 more)
docs/src/: README.md  SUMMARY.md
tools/kemar_data/: extract_kemar.py  hrir_data_kemar.rs
(+192 files in other folders)
