[package]
name = "bbx_daisy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Electrosmith Daisy hardware support for bbx_audio"
readme = "README.md"
keywords = ["audio", "dsp", "embedded", "daisy", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
bbx_core = { workspace = true }
bbx_dsp = { workspace = true, default-features = false }

# Embedded HAL traits (platform-independent)
# Using 0.2 for compatibility with stm32h7xx-hal 0.16
embedded-hal = "0.2"

# Math library for no_std
libm = "0.2"

# Embedded HAL (only for ARM Cortex-M targets)
[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32h7xx-hal = { version = "0.16", features = ["stm32h750v", "rt", "xspi", "fmc"] }
stm32-fmc = "0.3"
panic-halt = "1.0"

[[example]]
name = "01_blink"
required-features = ["seed"]

[[example]]
name = "02_oscillator"
required-features = ["seed"]

[[example]]
name = "03_filter_knob"
required-features = ["seed"]

[[example]]
name = "04_simple_synth"
required-features = ["seed"]

[features]
default = ["seed"]

# Daisy Seed variants
seed = []
seed_1_1 = []
seed_1_2 = []

# Daisy Pod
pod = []

# Patch family
patch_sm = []
patch_init = ["patch_sm"]  # Patch.Init uses Patch SM hardware
patch = ["patch_sm"]       # Alias for Patch SM

# Field (not yet implemented)
field = []

# Audio configuration
sampling_rate_96khz = []  # Use 96kHz sample rate instead of default 48kHz
block_length_64 = []      # Use 64 sample block size instead of default 48
