[package]
name = "bbx_draw"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Audio visualization primitives for nannou sketches"

[dependencies]
bbx_core.workspace = true
bbx_dsp.workspace = true
bbx_midi = { workspace = true, default-features = false }

nannou = "0.19"
rustfft = "6.2"
serde = { workspace = true }
serde_json.workspace = true
dirs = { version = "5.0", optional = true }

[dev-dependencies]
rodio.workspace = true

[features]
default = ["sketch-registry"]
sketch-registry = ["dep:dirs"]
