[package]
name = "bbx_dsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Block-based audio DSP graph system with oscillators, effects, modulators, and realtime-safe processing"
readme = "README.md"
keywords = ["audio", "dsp", "synthesis", "effects", "graph"]
categories = ["multimedia::audio", "science"]

[features]
default = []
ftz-daz = ["bbx_core/ftz-daz"]
simd = ["bbx_core/simd"]

[dependencies]
bbx_core.workspace = true
bbx_midi = { workspace = true, default-features = false }
