[package]
name = "bbx_dsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Block-based audio DSP graph system with oscillators, effects, modulators, and realtime-safe processing"
readme = "README.md"
keywords = ["audio", "dsp", "synthesis", "effects", "graph"]
categories = ["multimedia::audio", "science"]

[lib]
bench = false

[features]
default = ["std"]
std = ["alloc", "bbx_core/std", "bbx_midi/std"]
alloc = ["bbx_core/alloc", "bbx_midi/alloc", "dep:libm"]
ftz-daz = ["bbx_core/ftz-daz"]
simd = ["std", "bbx_core/simd"]

[dependencies]
bbx_core.workspace = true
bbx_midi.workspace = true
libm = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "simd_blocks"
harness = false

[[bench]]
name = "simd_graphs"
harness = false
