[package]
name = "bbx_net"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Network audio control for art installations and live performance: OSC and WebSocket protocols"
readme = "README.md"
keywords = ["audio", "osc", "websocket", "network", "realtime"]
categories = ["multimedia::audio", "network-programming"]

[features]
default = []
osc = ["dep:rosc"]
websocket = ["dep:tokio", "dep:tokio-tungstenite", "dep:serde", "dep:serde_json", "dep:futures-util"]
full = ["osc", "websocket"]

[dependencies]
bbx_core = { workspace = true }

# OSC parsing (optional)
rosc = { version = "0.10", optional = true }

# Async runtime for WebSocket (optional)
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "sync", "time", "macros"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

# JSON serialization for WebSocket (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
