[package]
name = "bbx_plugin"
version = "0.1.0"
edition = "2024"
description = "Plugin integration crate for bbx_audio DSP library with C FFI bindings"
license = "MIT"
links = "bbx_plugin"

[lib]
crate-type = ["rlib"]

[dependencies]
bbx_core = { path = "../bbx_core" }
bbx_dsp = { path = "../bbx_dsp" }
bbx_midi = { path = "../bbx_midi" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
