[package]
name = "bbx_plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Plugin integration crate for bbx_audio DSP library with C FFI bindings"
readme = "README.md"
keywords = ["audio", "plugin", "ffi", "vst", "juce"]
categories = ["multimedia::audio", "external-ffi-bindings"]
links = "bbx_plugin"

[lib]
crate-type = ["rlib"]

[features]
default = []
ftz-daz = ["bbx_core/ftz-daz"]

[dependencies]
bbx_core.workspace = true
bbx_dsp.workspace = true
bbx_midi = { workspace = true, default-features = false }

serde.workspace = true
serde_json.workspace = true
