[package]
name = "bbx_sandbox"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bbx_dsp = { workspace = true, features = ["ftz-daz", "simd"] }
bbx_file.workspace = true
bbx_midi = { workspace = true, features = ["streaming"] }

ctrlc = "3.4"
midir.workspace = true
rand.workspace = true
rodio.workspace = true
