[package]
name = "bbx_sandbox"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bbx_dsp = { workspace = true, features = ["ftz-daz", "simd"] }
bbx_file.workspace = true
bbx_midi = { workspace = true, features = ["streaming"] }
bbx_net = { workspace = true, features = ["full"] }
bbx_player = { workspace = true, features = ["rodio"] }

ctrlc = "3.5.1"
midir.workspace = true
rand.workspace = true
rodio.workspace = true
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }
